TH-89 columns display correctly on mobile

--- a/teamhuddle-api/app/assets/stylesheets/variables.scss
+++ b/teamhuddle-api/app/assets/stylesheets/variables.scss
@@ -14,3 +14,5 @@ $light-orange: #ff900b;
 
 $dark-red: #ff3900;
 $light-red: #ff4009;
+
+$selected-dropin: #E8E8E8;
